Basic GET URLs admin endpoint
