# internal/server/routes.go
@@ -123,5 +123,8 @@ func (s *Server) RegisterRoutes() http.Handler {
 	v1.GET("/urls", s.getUserUrls, authMw.RequireAuthentication, authMw.RequirePermission(auth.GetOwnURLs))
 	v1.DELETE("/urls/:code", s.deletShortUrlHandler, authMw.RequireAuthentication, authMw.RequirePermission(auth.DeleteOwnURLs))
 
+	admin := v1.Group("/admin", authMw.RequireAuthentication)
+	admin.GET("/urls", s.getURLs, authMw.RequirePermission(auth.GetURLs))
+
 	return e
 }
